Alignment of travel-boards is correct. Working on default image for travel-boards.

--- a/public/stylesheets/partials/_profile.scss
+++ b/public/stylesheets/partials/_profile.scss
@@ -31,7 +31,11 @@ margin-top: 1%;
 .travel-boards-container {
   display: flex;
   justify-content: space-between;
-  padding-top: 50px;
+  padding-top: 20px;
+}
+
+.card {
+  margin-top: 50px;
 }
 
 .boards-header {
